packages/win32/src/user32.g.h

MYLIB_EXPORT Win32Result UnregisterHotKey_Wrapper(HWND hWnd, int id);
MYLIB_EXPORT Win32Result UnregisterPowerSettingNotification_Wrapper(HPOWERNOTIFY handle);
MYLIB_EXPORT Win32Result UnregisterTouchWindow_Wrapper(HWND hwnd);
MYLIB_EXPORT Win32Result UserHandleGrantAccess_Wrapper(HANDLE hUserHandle, HANDLE hJob, BOOL bGrant);
MYLIB_EXPORT Win32Result WaitMessage_Wrapper();