packages/win32/lib/src/_internal/user32.g.dart


@internal
@Native<NativeWin32Result Function(HWND, Int32)>()
external NativeWin32Result UnregisterHotKey_Wrapper(int hWnd, int id);

@internal
@Native<NativeWin32Result Function(HPOWERNOTIFY)>()
external NativeWin32Result UnregisterPowerSettingNotification_Wrapper(
  int handle,
);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result UnregisterTouchWindow_Wrapper(int hwnd);

@internal
@Native<NativeWin32Result Function(HANDLE, HANDLE, BOOL)>()
external NativeWin32Result UserHandleGrantAccess_Wrapper(
  int hUserHandle,
  int hJob,
  int bGrant,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result WaitMessage_Wrapper();
